# blueretro-ble

./: CHANGELOG.md  CONTRIBUTING.md  HARDWARE.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml  release.yml
blueretro_ble/: __init__.py  const.py  device.py
scripts/: validate_hardware.py
src/blueretro_ble/: __init__.py  __main__.py  const.py  device.py  firmware.py  memorycard.py  models.py  protocol.py  scanner.py
tests/: test_cli.py  test_device_commands.py  test_device_update.py  test_dreamcast.py  test_firmware.py  test_global_config.py  test_input_config.py  test_memorycard.py  test_protocol.py  test_public_api.py  test_scanner.py  test_smoke.py  test_write_ops.py
tests/lib/: test_device_update.py  test_global_config.py
