[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blueretro-ble"
version = "0.2.0"
description = "BLE library for the BlueRetro retro-console Bluetooth adapter"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Hudson Brendon", email = "contato.hudsonbrendon@gmail.com" }]
keywords = ["blueretro", "bluetooth", "ble", "retro-gaming", "home-assistant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
]
dependencies = [
    "bleak>=0.22.0",
    "bleak-retry-connector>=3.5.0",
]

[project.urls]
Homepage = "https://github.com/hudsonbrendon/blueretro-ble"
Issues = "https://github.com/hudsonbrendon/blueretro-ble/issues"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.4"]

[project.scripts]
blueretro = "blueretro_ble.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/blueretro_ble"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
